# kiss-ntpd

./: Cargo.toml  README.md
.ci/: build.sh
src/: main.rs
systemd/: kiss-ntpd.service
