[package]
name = "kiss-ntpd"
version = "1.0.0"
authors = ["moparisthebest <admin@moparisthebest.com>"]
edition = "2018"

description = "NTP server that Keeps It Simple, Stupid"
repository  = "https://code.moparisthebest.com/moparisthebest/kiss-ntpd"
keywords    = ["ntp", "time", "kiss"]

license = "AGPL-3.0-or-later"
readme = "README.md"

include = [
    "**/*.rs",
    "Cargo.toml",
    "*.md",
]
